--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,11 @@ a {
   border-radius: 8px;
   color: #f9faf8;
   font-size: 18px;
-  font-weight: 600;
+  font-weight: 500;
+}
+
+.button-outline {
+  border: 2px solid #e5e7eb;
 }
 
 .dark-background {
@@ -159,4 +163,30 @@ a {
 .quote-container .author {
   font-weight: 500;
   text-align: right;
+}
+
+/* CTA SECTION */
+
+.cta-section {
+  padding: 96px 0;
+}
+
+.cta-container {
+  max-width: 1100px;
+  margin: 0 auto;
+  background-color: #3882f6;
+  border-radius: 8px;
+  padding: 48px 96px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cta-container .tertiary-heading {
+  color: #f9faf8;
+  margin-bottom: 4px;
+}
+
+.cta-container .text {
+  color: #f9faf8;
 }
